--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -5,11 +5,11 @@ on:
   schedule:
     - cron: '0 */3 * * *'  # At minute 0 past every 3rd hour
   
-  # Allow manual triggering from GitHub UI
+  # Allow manual triggering
   workflow_dispatch:
 
 jobs:
-  run-blinkit-workflow:
+  run-workflow:
     runs-on: ubuntu-latest
     
     steps:
@@ -28,47 +28,36 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements_v2.txt
+          pip install -r requirements.txt
       
-      # 4. Decode and restore credentials (different secrets for Blinkit)
+      # 4. Restore Google credentials
       - name: Restore Google credentials
         env:
-          BLINKIT_GOOGLE_CREDENTIALS: ${{ secrets.BLINKIT_GOOGLE_CREDENTIALS }}
-          BLINKIT_GOOGLE_TOKEN: ${{ secrets.BLINKIT_GOOGLE_TOKEN }}
+          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+          GOOGLE_TOKEN: ${{ secrets.GOOGLE_TOKEN }}
         run: |
-          echo "$BLINKIT_GOOGLE_CREDENTIALS" | base64 -d > credentials.json
-          echo "$BLINKIT_GOOGLE_TOKEN" | base64 -d > token.json
-          echo "✅ Blinkit credentials restored"
+          echo "$GOOGLE_CREDENTIALS" | base64 -d > credentials.json
+          echo "$GOOGLE_TOKEN" | base64 -d > token.json
+          echo "✅ Credentials restored"
       
-      # 5. Run the Blinkit workflow once
-      - name: Run Blinkit HOT workflow
+      # 5. Run the workflow
+      - name: Run workflow
         run: |
           echo "🚀 Starting Blinkit HOT workflow..."
-          python appv2.py --run-once
-          echo "✅ Blinkit workflow completed"
+          python app.py
       
-      # 6. Update token if refreshed (optional)
-      - name: Check if token was updated
-        id: check_token
-        run: |
-          if [ -f token.json ]; then
-            echo "token_updated=true" >> $GITHUB_OUTPUT
-          else
-            echo "token_updated=false" >> $GITHUB_OUTPUT
-          fi
-      
-      # 7. Cleanup
+      # 6. Cleanup
       - name: Cleanup credentials
         if: always()
         run: |
-          rm -f credentials.json token.json blinkit_hot_scheduler.log
+          rm -f credentials.json token.json
           echo "🧹 Cleaned up temporary files"
       
-      # 8. Upload logs as artifact
+      # 7. Upload logs
       - name: Upload logs
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: blinkit-logs-${{ github.run_number }}
-          path: blinkit_hot_scheduler.log
+          name: workflow-logs-${{ github.run_number }}
+          path: blinkit_scheduler.log
           retention-days: 30
