--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -24,11 +24,13 @@ jobs:
           python-version: '3.11'
           cache: 'pip'
       
-      # 3. Install dependencies
+      # 3. Install dependencies with specific numpy version
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          python -m pip install --upgrade pip setuptools wheel
+          pip cache purge
+          pip install numpy==1.24.3 --no-cache-dir
+          pip install -r requirements.txt --no-cache-dir
       
       # 4. Restore Google credentials
       - name: Restore Google credentials
