--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -18,13 +18,13 @@ jobs:
         uses: actions/checkout@v4
       
       # 2. Set up Python
-      - name: Set up Python 3.11
+      - name: Set up Python 3.10
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: '3.10'
           cache: 'pip'
       
-      # 3. Install dependencies with specific numpy version
+      # 3. Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel
