--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ google-auth==2.23.0
 google-auth-oauthlib==1.1.0
 google-auth-httplib2==0.1.1
 google-api-python-client==2.100.0
-pandas==2.1.0
+numpy==1.24.3
+pandas==1.5.3
 lxml==4.9.3
+openpyxl==3.1.2
